--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,17 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div( class="main-container" )
+    div( class="content-container" )
+      h1= title
+      p Welcome to #{title}
 
-  h2 Enter a one rep max to get started
-  br
-  h3 One Rep Max
-  form(method="POST" action="/workingmax")
-    input(
-      type='text'
-      name='oneRepMax'
-    )
-    input(type="submit" value="Calculate")
+      h2 Enter a one rep max to get started
+      br
+      h3 One Rep Max
+      form(method="POST" action="/workingmax")
+        input(
+          type='text'
+          name='oneRepMax'
+        )
+        input(type="submit" value="Calculate")
