--- a/views/workingmax.pug
+++ b/views/workingmax.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-  
-  h1 working max result here
-  p= workingmax
+  div( class="main-container" )
+    div( class="content-container" )
+      h1 working max result here
+      h2= workingmax
