added logic in routes to calculate and display working max

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,5 @@ block content
 
       h2 Choose a program to get started
       br
-      h3 One Rep Max
       form(method="GET" action="/531")
-        button(type="submit" class="btn btn-outline-info") 5:3:1
+        button(type="submit" class="btn btn-outline-light") 5:3:1
