--- a/views/workingmax.pug
+++ b/views/workingmax.pug
@@ -3,5 +3,5 @@ extends layout
 block content
   div( class="main-container" )
     div( class="content-container" )
-      h1 working max result here
+      h1 Your Working Max
       h2= workingmax
