added a view for results. stored workingMax in cookie, accessed in another route to produce desired results.

--- a/views/workingmax.pug
+++ b/views/workingmax.pug
@@ -5,3 +5,7 @@ block content
     div( class="content-container" )
       h1 Your Working Max
       h2= workingmax
+      br
+      br
+      form(method="GET" action="/workingmax/results")
+        button(type="submit" class="btn btn-outline-light") Get Results
