updated views to center the content on the page

--- a/views/531.pug
+++ b/views/531.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div( class="main-container" )
+  div( class="main-container" id="main-contain-2")
     div( class="content-container" )
       h1 Enter a one rep max for each lift to get started
       br
@@ -32,4 +32,4 @@ block content
           class='formInput'
         )
         br
-        input(type="submit" value="Calculate" id="calcButton")
+        input(type="submit" value="Calculate" class="btn btn-outline-light" id="calcButton")
