--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  div( class="main-container" )
-    div( class="content-container" )
+  div( class="main-container" id="main-contain-1")
+    div( class="content-container")
       h1= title
 
       h2 Choose a program to get started
