--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
-
+/*
 *{
 	border: 1px solid red;
-}
+} */
 
 body {
   color: white;
@@ -26,9 +26,48 @@ body {
 	align-items: center;
 }
 
-.formInput{
+/**************************
+INDEX VIEW
+**************************/
+#main-contain-1 {
+	height:100vh;
+	width: 100vw;
+}
+
+
+/**************************
+531 VIEW
+**************************/
+
+#main-contain-2 {
+	height:100vh;
+	width: 100vw;
+}
+
+form h2 {
+	text-align: center;
+}
+
+.formInput {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
 	margin-bottom: 10px;
-} 
+}
+
+#calcButton {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/**************************
+WORKING MAX VIEW
+**************************/
+#main-contain-3{
+	height: 100vh;
+	width: 100vw;
+}
 
 /**************************
 RESULTS VIEW
