--- a/views/workingmax.pug
+++ b/views/workingmax.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div( class="main-container" )
+  div( class="main-container" id="main-contain-3")
     div( class="content-container" )
       h1 Your Working Maxes
       h2 Overhead Press #{pressWorkingMax}
