Divided results view appropriate for months feature

--- a/views/workingmax.pug
+++ b/views/workingmax.pug
@@ -31,4 +31,4 @@ block content
             option(value=16) 16
             option(value=17) 17
             option(value=18) 18
-        button(type="submit" class="btn btn-outline-light") Get Results
+        button(type="submit" name="months" class="btn btn-outline-light") Get Results
