refactored many variables into arrays. reduced calculations using map

--- a/views/results.pug
+++ b/views/results.pug
@@ -3,9 +3,9 @@ extends layout
 block content
   div( class="container" )
     h1(id="resultsTitle") Results
-    div( class="container" id="resultsContainer" )
-      
-      div(class="monthOfResults")
+    
+      h3 Month
+      div( class="container" id="resultsContainer" )
         div(id="week1Results")
           ul(class="weekTitle") Week One Weights
             li Overhead Press: #{week1PressWeights}
