--- a/views/results.pug
+++ b/views/results.pug
@@ -9,7 +9,7 @@ block content
       div( class="container" id="resultsContainer" )
         div(id="week1Results")
           ul(class="weekTitle") Week One Weights
-            li Overhead Press: #{week1PressWeights} + 
+            li Overhead Press: #{monthOfWeights.week1Weights[0]}
             li Deadlift: #{week1DeadWeights}
             li Bench: #{week1BenchWeights}
             li Squat: #{week1SquatWeights}
