--- a/views/workingmax.pug
+++ b/views/workingmax.pug
@@ -13,7 +13,7 @@ block content
       form(method="POST" action="/workingmax/results")
         p Enter the number of months you want calculations for    
           select(name="months")
-            option(value=1) 1
+            option(value=1 selected="selected") 1
             option(value=2) 2
             option(value=3) 3
             option(value=4) 4
