--- a/views/results.pug
+++ b/views/results.pug
@@ -3,31 +3,26 @@ extends layout
 block content
   div( class="container" )
     h1(id="resultsTitle") Results
-    - var n = 0;
-    while n < months
-      h3 Month #{n++}
-      div( class="container" id="resultsContainer" )
-        div(id="week1Results")
-          ul(class="weekTitle") Week One Weights
-            li Overhead Press: #{monthOfWeights.week1Weights[0]}
-            li Deadlift: #{week1DeadWeights}
-            li Bench: #{week1BenchWeights}
-            li Squat: #{week1SquatWeights}
-        div(id="week2Results")
-          ul(class="weekTitle") Week Two Weights 
-            li Overhead Press: #{week2PressWeights}
-            li Deadlift: #{week2DeadWeights}
-            li Bench: #{week2BenchWeights}
-            li Squat: #{week2SquatWeights}
-        div(id="week3Results")
-          ul(class="weekTitle") Week Three Weights 
-            li Overhead Press: #{week3PressWeights}
-            li Deadlift: #{week3DeadWeights}
-            li Bench: #{week3BenchWeights}
-            li Squat: #{week3SquatWeights}
-        div(id="week4Results")
-          ul(class="weekTitle") Week Four Weights 
-            li Overhead Press: #{week4PressWeights}
-            li Deadlift: #{week4DeadWeights}
-            li Bench: #{week4BenchWeights}
-            li Squat: #{week4SquatWeights}
+      each val, index in results
+        h3= 'Month ' + index
+        div(class="container" id="resultsContainer")
+          ul(class="weekTitle") Week 1 Weights
+            li Overhead Press: #{results[index]["weights"]["week1Weights"]["OverheadPress"]}
+            li Deadlift: #{results[index]["weights"]["week1Weights"]["Deadlift"]}
+            li Bench: #{results[index]["weights"]["week1Weights"]["Bench"]}
+            li Squat: #{results[index]["weights"]["week1Weights"]["Squat"]}
+          ul(class="weekTitle") Week 2 Weights
+            li Overhead Press: #{results[index]["weights"]["week2Weights"]["OverheadPress"]}
+            li Deadlift: #{results[index]["weights"]["week2Weights"]["Deadlift"]}
+            li Bench: #{results[index]["weights"]["week2Weights"]["Bench"]}
+            li Squat: #{results[index]["weights"]["week2Weights"]["Squat"]}
+          ul(class="weekTitle") Week 3 Weights
+            li Overhead Press: #{results[index]["weights"]["week3Weights"]["OverheadPress"]}
+            li Deadlift: #{results[index]["weights"]["week3Weights"]["Deadlift"]}
+            li Bench: #{results[index]["weights"]["week3Weights"]["Bench"]}
+            li Squat: #{results[index]["weights"]["week3Weights"]["Squat"]}
+          ul(class="weekTitle") Week 4 Weights
+            li Overhead Press: #{results[index]["weights"]["week4Weights"]["OverheadPress"]}
+            li Deadlift: #{results[index]["weights"]["week4Weights"]["Deadlift"]}
+            li Bench: #{results[index]["weights"]["week4Weights"]["Bench"]}
+            li Squat: #{results[index]["weights"]["week4Weights"]["Squat"]}
