--- a/views/results.pug
+++ b/views/results.pug
@@ -4,7 +4,7 @@ block content
   div( class="container" )
     h1(id="resultsTitle") Results
       each val, index in results
-        h3= 'Month ' + index
+        h3(class="monthTitle")= 'Month ' + index
         div(class="container" id="resultsContainer")
           ul(class="weekTitle") Week 1 Weights
             li Overhead Press: #{results[index]["weights"]["week1Weights"]["OverheadPress"]}
