--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,22 @@
-/*
-*{
-	border: 1px solid red;
-} */
-
 body {
   color: white;
-  min-height: 100vh;
   height: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
   background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
   background-repeat: no-repeat;
   background-size: cover;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .main-container{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	min-height: 90vh;
+	min-width: 100vw;
+	/*height: 100%;*/
 }
 
 .content-container{
@@ -26,11 +26,20 @@ body {
 	align-items: center;
 }
 
-/**************************
-INDEX VIEW
-**************************/
-#main-contain-1 {
-	height:100vh;
+#footerLink {
+	color: white;
+	display: flex;
+	justify-content: center;
+}
+
+#footerLink p {
+	padding: 0;
+	margin: 0;
+}
+
+#footerLink a {
+	color: white;
+	height: 10vh;
 	width: 100vw;
 }
 
@@ -38,11 +47,6 @@ INDEX VIEW
 /**************************
 531 VIEW
 **************************/
-
-#main-contain-2 {
-	height:100vh;
-	width: 100vw;
-}
 
 form h2 {
 	text-align: center;
@@ -59,14 +63,6 @@ form h2 {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-}
-
-/**************************
-WORKING MAX VIEW
-**************************/
-#main-contain-3{
-	height: 100vh;
-	width: 100vw;
 }
 
 /**************************
