added some margin and padding for readability

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,7 @@ body {
 	color: white;
 	display: flex;
 	justify-content: center;
+	padding-bottom: 20px;
 }
 
 #footerLink p {
@@ -77,6 +78,7 @@ RESULTS VIEW
 	display: grid;
 	grid-template-columns: auto auto;
 	grid-template-rows: auto auto;
+	margin-bottom: 20px;
 }
 
 .monthTitle{
