--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,14 +53,36 @@ form h2 {
 	text-align: center;
 }
 
-.formInput {
-	display: block;
+.form-control {
 	margin-right: auto;
 	margin-left: auto;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 #calcButton {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/**************************
+RESULTS VIEW
+**************************/
+#workingmaxForm{
+	
+}
+
+#workingmaxSelect{
+	display: flex;
+	flex-direction: row;
+}
+
+#monthSelector{
+	display: inline-block;
+	max-height: 200px;
+}
+
+#getResultsButton{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
